# CryptoTax

./: .gitignore  .rustfmt.toml  Cargo.toml  Futures-Futures-Capital-Flow-2025-10-01-2025-10-20.csv  Makefile  README.md
.github/workflows/: auth-manual-integration-e2e.yml  auth-unit-contract.yml  ledger-manual-integration-e2e.yml  ledger-unit-contract.yml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-a2de80e3c07a82ac57ee7361bf9c1526e1bbf4dff713f0a976fa22e56b8e5133.json  query-ef35b76c314cd3499173e6937e7aec8e8e7dd37f7902b37d99851c8f6c3c0ce1.json
auth-service/migrations/: 20250902092580_extensions.sql  20250902092600_add_enums.sql  20250902092614_create_users.sql  20250902092625_create_sessions.sql  20250902092650_create_refresh.sql  20250902093000_create_email_verif.sql
auth-service/src/: config.rs  db.rs  error.rs  main.rs
auth-service/src/auth_core/: mod.rs
auth-service/src/auth_core/domain/: errors.rs  mod.rs  models.rs  ports.rs
auth-service/src/auth_core/usecase/: mod.rs  utils.rs
auth-service/src/infra/: aws_mailer.rs  mailer.rs  mod.rs
auth-service/src/infra/crypto/: jwt_issuer_rs256.rs  mod.rs  password_hasher_argon2.rs  refresh_factory.rs
auth-service/src/infra/db/: mod.rs
auth-service/src/infra/db/redis/: redis.rs
auth-service/src/infra/db/repos/: mod.rs  refresh_repo.rs  session_repo.rs  user_repo.rs
auth-service/src/routes/: extractors.rs  handlers.rs  mod.rs
auth-svc/: Cargo.toml  README.md
auth-svc/src/: config.rs  db.rs  error.rs  main.rs
auth-svc/src/auth_core/: mod.rs
auth-svc/src/auth_core/domain/: errors.rs  models.rs  ports.rs  services.rs
auth-svc/src/auth_core/usecase/: mod.rs  tests.rs  utils.rs
auth-svc/src/infra/: mailer.rs  mod.rs  tax_profile_client.rs
auth-svc/src/infra/crypto/: jwt_issuer_rs256.rs  mod.rs  password_hasher_argon2.rs  refresh_factory.rs
auth-svc/src/routes/: dto.rs  e2e_smoke.rs  extractors.rs  handlers.rs  mod.rs
crates/: Cargo.toml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cache/src/drivers/: mod.rs  null.rs  redis.rs
crates/coingecko/: Cargo.toml
crates/coingecko/src/: client.rs  lib.rs  params.rs
crates/coingecko/src/response/: coins.rs  derivatives.rs  exchanges.rs  mod.rs
ledger-svc/: Cargo.toml  config.yaml  worker_config.yaml
ledger-svc/migrations/: 20251028000100_create_imports.down.sql  20251028000100_create_imports.sql  20251028000100_create_imports.up.sql  20251028000200_create_transactions.sql  20251028000200_create_transactions.up.sql  20251028000300_create_outbox.sql  20251028000300_create_outbox.up.sql
ledger-svc/src/: config.rs  error.rs  main.rs
ledger-svc/src/application/exchanges/: mod.rs
ledger-svc/src/application/exchanges/configs/: mexc.yaml
ledger-svc/src/application/exchanges/mexc/: mod.rs
ledger-svc/src/application/exchanges/mexc/parsers/: deposits.rs  earn_fixed.rs  earn_flexible.rs  fiat_otc.rs  fiat_p2p_orders.rs  futures_capital_flow.rs  futures_copy_trade_orders.rs  futures_trades.rs  mod.rs  spot_statement.rs  spot_trades.rs  withdrawals.rs
ledger-svc/src/application/exchanges/okx/: mod.rs
ledger-svc/src/domain/: error.rs  mod.rs  ports.rs  services.rs
ledger-svc/src/domain/models/: exchange.rs  import.rs  mod.rs  transaction.rs  utils.rs
ledger-svc/src/infra/: config.rs  mod.rs  rabbitmq_client.rs
ledger-svc/src/infra/db/: mod.rs  redis.rs
ledger-svc/src/infra/db/pq/: import_repo.rs  mod.rs  tx_repo.rs  uow.rs
ledger-svc/src/infra/db/row_models/: import.rs  mod.rs  outbox.rs  transaction.rs
ledger-svc/src/infra/row_models/: import.rs  mod.rs  outbox.rs  transaction.rs
ledger-svc/src/routes/: e2e_smoke.rs  extractors.rs  handlers.rs  mod.rs
ledger-svc/src/worker/: config.rs  event_publisher.rs  mod.rs  outbox.rs  outbox_pg_store.rs
ledger-svc/src/worker/rabbitmq/: config.rs  mod.rs  rabbitmq.rs  rabbitmq_client.rs  rabbitmq_publisher.rs
price-svc/: Cargo.toml
price-svc/src/: main.rs
(+7 files in other folders)
