[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime & tracing
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"


# REST
axum = { version = "0.7", features = ["macros", "http1", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower-cookies = "0.10"


# sqlx
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls", # или "runtime-tokio-native-tls"
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
] }


# Redis
redis = { version = "0.24", features = ["tokio-comp"] }


# Mailer
aws-config = "1.8.6"
aws-sdk-sesv2 = "1.97.0"


# crypto
validator = "0.18"
zxcvbn = "2"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand = "0.8"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
jsonwebtoken = { version = "9", default-features = false, features = [
  "use_pem",
] }
rsa = { version = "0.9", default-features = false }
pkcs1 = "0.7"
hex = "0.4"


# utils
serde_with = { version = "3", features = ["chrono_0_4"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"

cache = { path = "../crates/cache" }
