[package]
name = "ledger-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime & tracing
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"


# REST
axum = { version = "0.7", features = ["macros", "http1", "http2"] }
axum-extra = { version = "0.9", features = ["multipart", "typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower-cookies = "0.10"


# sqlx
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }


# Redis
redis = { version = "0.24", features = ["tokio-comp"] }


# RabbitMQ
amqprs = "2.1.2"


# utils
typetag = "0.2.21"
csv-async = "1.3.1"
rust_decimal = "1.39.0"
serde_with = { version = "3", features = ["chrono_0_4"] }
serde_yaml = "0.9"
enum_dispatch = "0.3.13"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"

cache = { path = "../crates/cache" }
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["compat", "io"] }
